# [m]- blahalhjaljkalkjlajazkljklqjsd qslkdjqs lkdjqsl
#      qmlfkmzkk qskdjfmqslfk mlqzemfj qmlj mldf
#
# date start with a number and can then include anything, they are like comments
# 23/07/2002 - T.o.M.E 2.0.0 aka "Point of No Return"

# bug.txt should follow the exact same format

# special tag to specify the current version
[V]  TomeNET 4.0.0 aka "The Gathering"

25/11/2002
[I]- No more color information in the message dump in character dumps

20/11/2002
[I]- Unkown skills(no mod, no value) arent displayed in the list
[I]- Removed a *LOT* of AI_ANNOY
[P]- Mind, Nature, Divination, Meta and Udun schools are bound to Wisdom
     instead of Intelligence. Priests are tweaked accordingly
[P]- Max skill level = player level + 2
[P]- Impossible to gain exp after level 50 until Morgoth is dead
[m]- Windows server nearly works, but there is a problem with player speed

13/11/2002
[O]- Adjusted 2h-only weapons.
     Artefacts now sell for the intended values.
     Changed former Amulet Of Suspicion into Amulet Of Rage.
     Adjusted ego lights' prices.
[G]- *ID* services cost more now, making *ID* scrolls an alternative again.
[P]- Adjusted adj_con_mhp so that 18/200..18/220 makes a slight difference.

12/11/2002
[O]- Adjusted 2h-only weapons. Added Thunder Axe to axe class weapons.
[G]- Fixed resisting GF_PLASMA.

11/11/2002
[O]- Greatly reworked 2h-only weapons.
     Adjusted missile launchers.
     Adjusted polymorph ring costs.
     Adjusted artefacts.
[M]- Changed REFLECT to RES_MANA for monsters.
     Removed HAND_DOOM. Adjusted Holy prefix.
[P]- Admins won't receive Grond anymore.

09/11/2002
[O]- Only darkswords can give antimagic

07/11/2002
[O]- Adjusted polymorph rings. Weapon classes are now displayed on examining.

06/11/2002
[G]- Highscore is now calculated in a more sensible way (I hope).

05/11/2002
[I]- Enhanced account/character-overview screen.
[P]- Adjusted Ents & Thunderlord due to forum thread.