@@ -432,8 +432,8 @@ static cptr r_info_flags7[] =
 	"XXX7X24",
 	"XXX7X25",
 	"XXX7X26",
-	"XXX7X27",
-	"XXX7X28",
+	"S_LOWEXP", //"XXX7X27",
+	"S_NOEXP", //"XXX7X28",
 	"ATTR_BREATH",	//"XXX7X29",
 	"MULTIPLY",		//"XXX7X30",
 	"DISBELIEVE",	//"XXX7X31",
