@@ -6302,7 +6302,7 @@ void call_chaos(int Ind, int dir)
 	}
 }
 
-void summon_cyber(int Ind)
+void summon_cyber(int Ind, int s_clone)
 {
 	player_type *p_ptr = Players[Ind];
 	int i;
@@ -6310,7 +6310,7 @@ void summon_cyber(int Ind)
 
 	for (i = 0; i < max_cyber; i++)
 	{
-		(void)summon_specific(&p_ptr->wpos, p_ptr->py, p_ptr->px, 100, SUMMON_HI_DEMON);
+		(void)summon_specific(&p_ptr->wpos, p_ptr->py, p_ptr->px, 100, s_clone, SUMMON_HI_DEMON);
 	}
 }
 
